[tool.poetry]
name = "city-journeys"
version = "0.1.0"
description = ""
authors = ["Marc-Philipp Esser <m-esser@mail.de>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
mysql-connector-python = "^9.0.0"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.1"
flask-migrate = "^4.0.7"
pandas = "^2.2.3"
boto3 = "^1.35.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
